--- a/src/pages/DetailPage/DetailPage.scss
+++ b/src/pages/DetailPage/DetailPage.scss
@@ -39,7 +39,7 @@
   .movie-poster-image {
     object-fit: contain;
     object-position: center;
-    box-shadow: $primary 0 0 10px 3px;
+    // box-shadow: $primary 0 0 10px 3px;
     width: 40%;
 
     @include media-breakpoint-up(lg) {
