--- a/src/pages/ListPage/ListPage.scss
+++ b/src/pages/ListPage/ListPage.scss
@@ -1,6 +1,12 @@
+@import "../../styles/mixins";
 @import "../../styles/variables";
 
 .movies-filter {
+
+  @include media-breakpoint-up(lg) {
+    margin-right: 15px;
+  }
+
   ul {
     padding: 0;
     margin: 0;
@@ -27,4 +33,9 @@
       color: #fff;
     }
   }
+}
+
+li.active a {
+  background: $primary !important;
+  color: #fff !important;
 }
