--- a/src/pages/PeopleDetail/PeopleDetail.scss
+++ b/src/pages/PeopleDetail/PeopleDetail.scss
@@ -13,7 +13,6 @@
     max-width: 100%;
   }
 
-
   .people-detail {
     background: rgba(6, 9, 6, 0.7) !important;
   }
@@ -21,10 +20,12 @@
   .people-profile-image {
     object-fit: contain;
     object-position: center;
+    margin-left: auto;
+    margin-right: auto;
     // box-shadow: $primary 0 0 10px 3px;
     width: 40%;
 
-    @include media-breakpoint-up(lg) {
+    @include media-breakpoint-up(xl) {
       width: 100%;
     }
   }
@@ -33,13 +34,13 @@
     width: 100%;
     font-weight: 600;
     font-size: 17px;
-    color: #FFF;
+    color: #fff;
   }
 
   .description-text {
     width: 100%;
     font-size: 17px;
-    color: #FFF;
+    color: #fff;
     opacity: 0.8;
   }
 
@@ -51,5 +52,63 @@
 
   .movie-detail-poster-container {
     max-width: inherit;
+  }
+
+  h3 {
+    color: #FFF;
+  }
+
+  .table-card {
+    // box-shadow: 0 2px 8px rgba(255, 255, 255, 0.9);
+    // background-color: #000;
+    width: 100%;
+    border-radius: 5px;
+   
+    hr {
+      margin-top: 0rem;
+      margin-bottom: 0rem;
+    }
+    .year {
+      min-width: 60px;
+      font-weight: 400;
+      color: #FFF;
+      text-align: center;
+    }
+    .year-padding {
+      padding: 10px 8px;
+    }
+    .movie-title {
+      color: #FFF;
+      font-size: 1em;
+      font-weight: 500;
+      padding: 10px 0px;
+    }
+    .seperator {
+      width: 20px;
+      color: #ccc;
+      text-align: center;
+      padding: 10px 8px;
+    }
+    .movie-character {
+      color: rgba(255, 255, 255, 0.5);
+      font-weight: 400;
+      padding: 10px 6px;
+      span {
+        color: rgba(255, 255, 255, 0.8);
+        font-weight: 500;
+      }
+    }
+
+ 
+  .here {
+      margin: 0px auto;
+      width: 60%;
+      height: 20px;
+      width: 2px;
+      border: 1px solid #FFF;
+      position:relative;
+      text-align:center;
+      min-height: 100%;
+  }
   }
 }
