--- a/src/components/MenuBar/MenuBar.scss
+++ b/src/components/MenuBar/MenuBar.scss
@@ -59,6 +59,7 @@
     /* Color/shape of burger icon bars on hover*/
     .bm-burger-bars-hover {
       background: #a90000;
+      color: white;
     }
 
     /* Position and sizing of clickable cross button */
