--- a/src/index.scss
+++ b/src/index.scss
@@ -122,11 +122,14 @@ body {
   }
 
   .h-w-100 {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    // position: absolute;
+    // top: 0;
+    // bottom: 0;
+    // left: 0;
+    // right: 0;
+
+    min-height: 90vh;
+    width: 100%;
   }
 
   h1,
