--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -31,6 +31,23 @@
       margin: 15px 0px;
     }
   }
+  
+  .slick-prev:before,
+  .slick-next:before {
+    font-size: 50px;
+    color: transparent;
+    color: white;
+  }
+
+  .slick-next:before {
+    content: '〉';
+    margin-right: -40px;
+}
+.slick-prev:before {
+  content: '〈';
+  margin-left: -40px;
+}
+
   .slick-prev {
     left: 0%;
     background-image: linear-gradient(
