--- a/src/components/MoviePersonRow/MoviePersonRow.scss
+++ b/src/components/MoviePersonRow/MoviePersonRow.scss
@@ -9,7 +9,7 @@ a:hover {
 }
 
   .slick-next {
-    height:  calc(100% - 30px);
+    height:  calc(100% - 2rem);
     width: 50px;
     right: 0%;
     background-image: linear-gradient(
@@ -40,7 +40,7 @@ a:hover {
 
   .slick-prev {
     width: 50px;
-    height:  calc(100% - 30px);
+    height:  calc(100% - 2rem);
     left: 0%;
     background-image: linear-gradient(
       to right,
@@ -56,179 +56,12 @@ a:hover {
     -webkit-overflow-scrolling: touch;
     -ms-overflow-style: -ms-autohiding-scrollbar;
 
-    .movie-row-parent {
-      position: relative;
-      transition: transform 0.2s;
-      overflow: hidden;
-      // min-height: 180px;
+    
 
-      @include media-breakpoint-up(md) {
-        // min-height: 220px;
-      }
-
-      .movie-row-image {
-        transition: transform 0.2s;
-        z-index: 0;
-        position: absolute;
-        top: 0;
-        left: 0;
-        bottom: 0;
-        right: 0;
-        
-      }
-
-      .movie-row-image-place {
-        z-index: -100;
-        // position: absolute;
-      }
-
-      .movie-row-info {
-        position: absolute;
-        bottom: 0;
-        height: auto;
-        z-index: 0;
-        border-bottom-left-radius: 15px;
-        border-bottom-right-radius: 15px;
-        background-image: linear-gradient(
-          to top,
-          rgba(198, 40, 40, 1),
-          rgba(198, 40, 40, 1),
-          rgba(198, 40, 40, 0.9),
-          rgba(198, 40, 40, 0.8),
-          rgba(198, 40, 40, 0.7),
-          rgba(198, 40, 40, 0.5),
-          rgba(198, 40, 40, 0)
-        );
-
-        .character-name {
-          -webkit-line-clamp: 4;
-          overflow: hidden;
-          -webkit-box-orient: vertical;
-          display: -webkit-box;
-          overflow-wrap: break-word;
-        }
-      }
-    }
-
-    .movie-row-parent:hover .movie-row-image {
-      transform: scale(1.2);
-    }
-
-    .movie-row-parent:hover {
-      // box-shadow: $primary 0 0 8px 3px;
-    }
-
-    .person-row-parent {
-      position: relative;
-      transition: transform 0.2s;
-      overflow: hidden;
-
-      .person-row-image {
-        object-fit: cover;
-        object-position: center;
-        background: #333333;
-        z-index: 0;
-        position: absolute;
-        top: 0;
-        left: 0;
-        bottom: 0;
-        right: 0;
-      } 
-      .person-row-image-place {
-        z-index: -100;
-        // position: absolute;
-      }
-
-      .person-row-info {
-        // transition: transform 0.2s;
-        transition: all 500ms ease;
-        z-index: 0;
-        /*note: not transitioning width */
-        // transition-property: height, background, box-shadow;
-        position: absolute;
-        height: auto;
-        border-bottom-left-radius: 15px;
-        border-bottom-right-radius: 15px;
-        bottom: 0;
-        background-image: linear-gradient(
-          to top,
-          rgba(198, 40, 40, 1),
-          rgba(198, 40, 40, 1),
-          rgba(198, 40, 40, 0.9),
-          rgba(198, 40, 40, 0.8),
-          rgba(198, 40, 40, 0.7),
-          rgba(198, 40, 40, 0.5),
-          rgba(198, 40, 40, 0)
-        );
-
-        @include media-breakpoint-up(xl) {
-          bottom: -250px;
-        }
-
-        .character-cast-name {
-          @include media-breakpoint-down(sm) {
-            font-size: 18px;
-          }
-        }
-
-        .character-name {
-          -webkit-line-clamp: 4;
-          overflow: hidden;
-          -webkit-box-orient: vertical;
-          display: -webkit-box;
-          overflow-wrap: break-word;
-
-          @include media-breakpoint-down(sm) {
-            font-size: 14px;
-          }
-        }
-      }
-    }
-
-    .person-row-parent:hover .person-row-info {
-      @include media-breakpoint-up(xl) {
-        transform: translateY(-250px);
-      }
-    }
-
-    .person-row-parent:hover {
-      // box-shadow: $primary 0 0 8px 3px;
-    }
+    
   }
 
   .job-title {
     opacity: 0.8;
-  }
-}
-
-
-iframe {
-  width: calc(100% - 30px);
-  height: 424px;
-  border-width: 0px;
-  box-shadow: $primary 0 0 10px 3px;
-
-  @include media-breakpoint-down(xl) {
-    margin: 15px auto;
-    min-width: 100%;
-    min-height: calc((100vw - 30px) / (16 / 9));
-    // min-width: unset;
-    // min-height: unset;
-  }
-
-  @include media-breakpoint-up(xl) {
-    max-width: 100%;
-    max-height: calc((100vw - 40px) / (16 / 9));
-    margin: 15px 10px;
-    min-width: unset;
-    min-height: unset;
-  }
-
-  @include media-breakpoint-down(md) {
-    min-width: unset;
-    min-height: unset;
-    max-width: 100%;
-    max-height: calc((100vw - 40px) / (16 / 9));
-    margin: 15px 15px;
   }
 }
