--- a/src/index.scss
+++ b/src/index.scss
@@ -57,77 +57,7 @@ body {
     white-space: nowrap;
   }
 
-  .t-p-4 {
-    padding: 15px !important;
-  }
-  .t-pl-4 {
-    padding-left: 15px !important;
-  }
-  .t-pt-4 {
-    padding-top: 15px !important;
-  }
-  .t-pr-4 {
-    padding-right: 15px !important;
-  }
-  .t-pb-4 {
-    padding-bottom: 15px !important;
-  }
-
-  .t-p-2 {
-    padding: 7px !important;
-  }
-  .t-pl-2 {
-    padding-left: 7px !important;
-  }
-  .t-pt-2 {
-    padding-top: 7px !important;
-  }
-  .t-pr-2 {
-    padding-right: 7px !important;
-  }
-  .t-pb-2 {
-    padding-bottom: 7px !important;
-  }
-
-  .t-m-4 {
-    margin: 15px !important;
-  }
-  .t-ml-4 {
-    margin-left: 15px !important;
-  }
-  .t-mt-4 {
-    margin-top: 15px !important;
-  }
-  .t-mr-4 {
-    margin-right: 15px !important;
-  }
-  .t-mb-4 {
-    margin-bottom: 15px !important;
-  }
-
-  .t-m-2 {
-    margin: 7px !important;
-  }
-  .t-ml-2 {
-    margin-left: 7px !important;
-  }
-  .t-mt-2 {
-    margin-top: 7px !important;
-  }
-  .t-mr-2 {
-    margin-right: 7px !important;
-  }
-  .t-mb-2 {
-    margin-bottom: 7px !important;
-  }
-
   .h-w-100 {
-    // position: absolute;
-    // top: 0;
-    // bottom: 0;
-    // left: 0;
-    // right: 0;
-
     min-height: 90vh;
     width: 100%;
   }
@@ -157,7 +87,7 @@ body {
   }
 
   .col-poster {
-    padding: 0 15px;
+    padding: 0 1rem;
     flex: 0 0 45%;
     max-width: 45%;
 
@@ -174,7 +104,7 @@ body {
   }
 
   .col-poster-3 {
-    padding: 0 15px;
+    padding: 0 1rem;
     flex: 0 0 45%;
     max-width: 45%;
 
@@ -190,7 +120,7 @@ body {
   }
 
   .border-radius {
-    border-radius: 15px;
+    border-radius: .75rem;
   }
 
   .min-height {
