--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -3,6 +3,7 @@
   position: relative;
   .slick-arrow {
     position: absolute;
+    overflow: hidden;
     top: 50%;
     width: 20px;
     z-index: 100;
