--- a/src/App.scss
+++ b/src/App.scss
@@ -34,7 +34,7 @@
       color: #aaa;
       text-decoration: none;
       line-height: 30px;
-      font-size: 14px;
+      font-size: pxToRem(14px);
       text-align: center;
       margin: 0 10px;
     }
