--- a/src/components/MenuBar/MenuBar.scss
+++ b/src/components/MenuBar/MenuBar.scss
@@ -6,7 +6,7 @@
     background: white;
     box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.3);
     .nav-title {
-      font-size: 30px;
+      font-size: 2rem;
       padding: 5px 10px;
       margin: 10px 0px;
       &:hover {
@@ -84,7 +84,7 @@
     .bm-menu {
       background: #ffffff;
       padding-top: 40px;
-      font-size: 18px;
+      font-size: pxToRem(18px);
     }
 
     input:focus {
