--- a/src/index.scss
+++ b/src/index.scss
@@ -9,6 +9,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  // -webkit-touch-callout: none;
 
   .logo {
     background-image: linear-gradient(90deg, #b31217, #e52d27);
@@ -73,15 +74,15 @@ body {
   }
 
   h1 {
-    font-size: 30px;
+    font-size: pxToRem(30px);
   }
 
   .error-container {
     h1 {
-      font-size: 100px;
-      
+      font-size: pxToRem(100px);
+
       @include media-breakpoint-up(md) {
-        font-size: 150px;
+        font-size: pxToRem(150px);
       }
     }
   }
@@ -120,10 +121,18 @@ body {
   }
 
   .border-radius {
-    border-radius: .75rem;
+    border-radius: 0.75rem;
   }
 
   .min-height {
     min-height: 80vh;
+  }
+
+  // The default font size for html is 16px
+  $base-size: 16;
+  //Function to convert px value into rem
+  //You can replace rem with any other value you want (rem is most preferred value for web)
+  @function pxToRem($target, $context: $base-size) {
+    @return ($target / $context) * 1em;
   }
 }
