--- a/src/pages/ListPage/ListPage.scss
+++ b/src/pages/ListPage/ListPage.scss
@@ -18,7 +18,7 @@
       display: inline-block;
       padding: 6px 30px;
       color: $primary;
-      font-size: 14px;
+      font-size: pxToRem(14px);
       cursor: pointer;
       user-select: none;
       border-right: 1px solid $primary;
