--- a/src/pages/PeopleDetail/PeopleDetail.scss
+++ b/src/pages/PeopleDetail/PeopleDetail.scss
@@ -33,13 +33,13 @@
   .title-text {
     width: 100%;
     font-weight: 600;
-    font-size: 17px;
+    font-size: pxToRem(17px);
     color: #fff;
   }
 
   .description-text {
     width: 100%;
-    font-size: 17px;
+    font-size: pxToRem(17px);
     color: #fff;
     opacity: 0.8;
   }
@@ -47,7 +47,7 @@
   .movie-overview {
     opacity: 0.9;
     line-height: 1.3;
-    font-size: 17px;
+    font-size: pxToRem(17px);
   }
 
   .movie-detail-poster-container {
